--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Freedom</title>
+  <title></title>
 </head>
 <body>
   <div class="wallpaper">
